- Rename package from `com.embabel.gekko.agent` to `com.embabel.gekko.config` - Introduce `Analysts` domain class for various types of financial reports - Refactor cache management in `AlphaVantageService` - Update `ReflectionPrompt` and `TraderAgent` to use new `Analysts` reports